# pytorchtrf

./: pyproject.toml
03장 파이토치 기초/: 예제 3.02 텐서 속성.ipynb  예제 3.04 텐서 자료형 설정.ipynb  예제 3.06 텐서 장치 변환.ipynb  예제 3.09~3.10 비쌍체 t-검정.ipynb  예제 3.11~3.17 단순 선형 회귀(넘파이).ipynb  예제 3.18~3.24 단순 선형 회귀(파이토치).ipynb  예제 3.25 zero_grad(), cost.backward(), optimizer.step().ipynb  예제 3.26~3.28 신경망 패키지 적용.ipynb
실습/: data_tutorial.ipynb  logistic_descent.ipynb  logistic_regression.ipynb  summary.ipynb
