[tool.poetry]
name = "pytorchtrf"
version = "0.1.0"
description = ""
authors = ["valeos <code.juno@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
torch = "2.0.1"
torchvision = "0.15.2"
numpy = "^2.1.3"
pandas = "^2.2.3"
seaborn = "^0.13.2"
scipy = "^1.14.1"
matplotlib = "^3.9.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
